--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<body>
 		<a-scene>
 			<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+			<a-cylinder color="brown" height="3" radius="1"></a-cylinder>
 		</a-scene>
 	</body>
 </html>
