--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	</head>
 	<body>
 		<a-scene>
+			<a-sky color="#AB9CCE"></a-sky>
 			<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+			<a-cylinder position="0 0.5 -5" color="green"></a-cylinder>
 		</a-scene>
 	</body>
 </html>
