--- a/index.html
+++ b/index.html
@@ -9,14 +9,26 @@
 	</head>
 	<body>
 		<a-scene>
+			<a-assets>
+				<img
+					id="groundTexture"
+					src="https://cdn.aframe.io/a-painter/images/floor.jpg"
+				/>
+			</a-assets>
 			<a-sky color="#AB9CCE"></a-sky>
+			<a-cylinder
+				id="ground"
+				src="#groundTexture"
+				radius="30"
+				height="0.1"
+			></a-cylinder>
 			<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
 			<a-cylinder position="0 0.5 -5" color="green"></a-cylinder>
 			<a-cylinder
-				position="-3 0.5 -5"
+				position="-3 12 0"
 				color="brown"
-				height="3"
-				radius="1"
+				height="24"
+				radius="0.5"
 			></a-cylinder>
 		</a-scene>
 	</body>
