--- a/index.html
+++ b/index.html
@@ -15,21 +15,24 @@
 					src="https://cdn.aframe.io/a-painter/images/floor.jpg"
 				/>
 			</a-assets>
-			<a-sky color="#AB9CCE"></a-sky>
+			<a-sky color="#8472CE"></a-sky>
 			<a-cylinder
 				id="ground"
 				src="#groundTexture"
 				radius="30"
 				height="0.1"
 			></a-cylinder>
-			<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-			<a-cylinder position="0 0.5 -5" color="green"></a-cylinder>
 			<a-cylinder
 				position="-3 12 0"
-				color="brown"
+				color="#813D1E"
 				height="24"
 				radius="0.5"
 			></a-cylinder>
+			<a-triangle
+				position="-10 0.5 -15"
+				color="red"
+				vertex-c="1 -1 0"
+			></a-triangle>
 		</a-scene>
 	</body>
 </html>
