--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 			<a-sky color="#AB9CCE"></a-sky>
 			<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
 			<a-cylinder position="0 0.5 -5" color="green"></a-cylinder>
+			<a-cylinder 
+				position = "-3 -10"
+				color = "brown"
+				height="15"
+				radius = "1.5"
+			> </a-cylinder>
+
 			<a-cylinder
 				position="-3 0.5 -5"
 				color="brown"
