--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 	</head>
 	<body>
 		<a-scene>
-<<<<<<< HEAD
 			<a-sky color="#AB9CCE"></a-sky>
-			<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-			<a-cylinder position="0 0.5 -5" color="green"></a-cylinder>
 			<a-cylinder 
 				position = "-3 -10"
 				color = "brown"
@@ -20,7 +17,6 @@
 				radius = "1.5"
 			> </a-cylinder>
 
-=======
 			<a-assets>
 				<img
 					id="groundTexture"
@@ -28,19 +24,64 @@
 				/>
 			</a-assets>
 			<a-sky color="#8472CE"></a-sky>
->>>>>>> cf901967a982b4b3a60bbb10a9ddd8891c24083d
 			<a-cylinder
 				id="ground"
 				src="#groundTexture"
 				radius="30"
 				height="0.1"
 			></a-cylinder>
+			
 			<a-cylinder
-				position="-3 12 0"
+			
+				position="-1.6 2 -1.5"
+				color="#813D1E"
+				height="4"
+				radius="0.3"
+			></a-cylinder>
+			
+			<a-cylinder
+				position="-3 4 -6"
+				rotation="0 0 20"
+				color="#813D1E"
+				height="8"
+				radius="0.3"
+			></a-cylinder>
+			
+			<a-cylinder
+				position="-2.5 6 -10"
+				rotation="0 0 5"
+				color="#813D1E"
+				height="12"
+				radius="0.3"
+			></a-cylinder>
+			
+			<a-cylinder
+				position="0.8 6 -2.4"
+				rotation="0 0 4"
 				color="#813D1E"
 				height="24"
-				radius="0.5"
+				radius="0.3"
 			></a-cylinder>
+			
+			<a-cylinder
+				position="3 2 -2.1"
+				rotation="0 0 0"
+				color="#813D1E"
+				height="4"
+				radius="0.3"
+			></a-cylinder>
+
+			<a-cylinder
+				position="3 3.3 -3"
+				rotation="0 0 70"
+				color="#813D1E"
+				height="7"
+				radius="0.3"
+			></a-cylinder>
+
+
+			
+			
 			<a-triangle
 				position="-10 0.5 -15"
 				color="red"
