--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 				/>
 			</a-assets>
 			<a-sky color="#8472CE"></a-sky>
+
+			<!--tree-->
+
 			<a-cylinder
 				id="ground"
 				src="#groundTexture"
@@ -56,11 +59,11 @@
 			></a-cylinder>
 			
 			<a-cylinder
-				position="0.8 6 -2.4"
+				position="0.8 6 -4"
 				rotation="0 0 4"
 				color="#813D1E"
 				height="24"
-				radius="0.3"
+				radius="0.5"
 			></a-cylinder>
 			
 			<a-cylinder
@@ -80,13 +83,36 @@
 			></a-cylinder>
 
 
-			
+			<!--little red-->
 			
 			<a-triangle
-				position="-10 0.5 -15"
+				position="-11.9 0.5 -15"
 				color="red"
 				vertex-c="1 -1 0"
 			></a-triangle>
+
+			<!--wolf-->
+			<a-sphere
+			position="0.5 1.3 -0.5"
+			color="black"
+			radius="0.6"
+			segments-width="3"
+			segments-height="2"
+			wireframe="false">
+			</a-sphere>
+
+			<a-triangle
+				position="0.75 1.7 -0.5"
+				color="black"
+				rotation="0 0 65"
+				vertex-c="0.0001 -0.001 0"
+			></a-triangle>
+
+			
+
+
+			
+
 		</a-scene>
 	</body>
 </html>
