--- a/index.html
+++ b/index.html
@@ -5,18 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-		<link rel="stylesheet" href="index.css" />
 	</head>
 	<body>
 		<a-scene>
 			<a-sky color="#AB9CCE"></a-sky>
-			<a-cylinder 
-				position = "-3 -10"
-				color = "brown"
-				height="15"
-				radius = "1.5"
-			> </a-cylinder>
-
 			<a-assets>
 				<img
 					id="groundTexture"
@@ -24,24 +16,19 @@
 				/>
 			</a-assets>
 			<a-sky color="#8472CE"></a-sky>
-
-			<!--tree-->
-
+			<!--trees-->
 			<a-cylinder
 				id="ground"
 				src="#groundTexture"
 				radius="30"
 				height="0.1"
 			></a-cylinder>
-			
 			<a-cylinder
-			
-				position="-1.6 2 -1.5"
+				position="-2 2 -1.5"
 				color="#813D1E"
 				height="4"
 				radius="0.3"
 			></a-cylinder>
-			
 			<a-cylinder
 				position="-3 4 -6"
 				rotation="0 0 20"
@@ -49,7 +36,6 @@
 				height="8"
 				radius="0.3"
 			></a-cylinder>
-			
 			<a-cylinder
 				position="-2.5 6 -10"
 				rotation="0 0 5"
@@ -57,7 +43,6 @@
 				height="12"
 				radius="0.3"
 			></a-cylinder>
-			
 			<a-cylinder
 				position="0.8 6 -4"
 				rotation="0 0 4"
@@ -65,7 +50,6 @@
 				height="24"
 				radius="0.5"
 			></a-cylinder>
-			
 			<a-cylinder
 				position="3 2 -2.1"
 				rotation="0 0 0"
@@ -73,7 +57,6 @@
 				height="4"
 				radius="0.3"
 			></a-cylinder>
-
 			<a-cylinder
 				position="3 3.3 -3"
 				rotation="0 0 70"
@@ -81,38 +64,105 @@
 				height="7"
 				radius="0.3"
 			></a-cylinder>
-
-
-			<!--little red-->
-			
+			<!--little red riding hood-->
 			<a-triangle
-				position="-11.9 0.5 -15"
+				position="-15.4 0.5 -15"
 				color="red"
 				vertex-c="1 -1 0"
 			></a-triangle>
-
 			<!--wolf-->
-			<a-sphere
-			position="0.5 1.3 -0.5"
-			color="black"
-			radius="0.6"
-			segments-width="3"
-			segments-height="2"
-			wireframe="false">
+			<!-- <a-sphere
+				position="0.5 1.3 -0.5"
+				color="black"
+				radius="0.6"
+				segments-width="3"
+				segments-height="2"
+				wireframe="false"
+			> -->
 			</a-sphere>
+			<a-triangle
+				position="0.75 1.7 -0.5"
+				color="black"
+				rotation="0 0 325"
+				vertex-c="0.0001 -0.001 0"
+			></a-triangle>
+			<a-triangle
+				position="0.75 1.52 -0.5"
+				color="black"
+				rotation="0 0 320"
+				vertex-c="0.0001 -0.001 0"
+			></a-triangle>
+			<!-- top teeth -->
+			<a-triangle
+			position="0.3 1.52 -0.6"
+			rotation="0 0 15"
+			color="white"
+			rotation="0 0 0"
+			vertex-a="-0.1 0.07 -0.6"
+			vertex-b="-0.07 -0.05 -0.6"
+			vertex-c="-0.04 0.08 -0.6"
+			></a-triangle>
+			<a-triangle
+			position="0.3 1.52 -0.6"
+			rotation="0 0 25"
+			color="white"
+			vertex-a="-0.03 0.07 -0.6"
+			vertex-b="-0.01 0 -0.6"
+			vertex-c="0.02 0.08 -0.6"
+			></a-triangle>
+			<a-triangle
+			position="0.3 1.52 -0.6"
+			rotation="0 0 15"
+			color="white"
+			rotation="0 0 0"
+			vertex-a="0 0.1 -0.6"
+			vertex-b="0.05 -0.1 -0.6"
+			vertex-c="0.1 0.1 -0.6"
+			></a-triangle>
+			<!-- bottom teeth -->
+			<a-triangle
+			position="0.1 1.3 -0.6"
+			rotation="0 0 210"
+			color="white"
+			rotation="0 0 0"
+			vertex-a="-0.1 0.07 -0.6"
+			vertex-b="-0.07 -0.05 -0.6"
+			vertex-c="-0.04 0.06 -0.6"
+			></a-triangle>
+			<a-triangle
+			position="0.19 1.35 -0.6"
+			rotation="0 0 210"
+			color="white"
+			vertex-a="-0.03 0.07 -0.6"
+			vertex-b="-0.01 0 -0.6"
+			vertex-c="0.02 0.08 -0.6"
+			></a-triangle>
+			<a-triangle
+			position="0.3 1.4 -0.6"
+			rotation="0 0 210"
+			color="white"
+			rotation="0 0 0"
+			vertex-a="0 0.1 -0.6"
+			vertex-b="0.05 -0.1 -0.6"
+			vertex-c="0.08 0.05 -0.6"
+			></a-triangle>
+			<a-triangle
+			position="0.5 1.4 -0.6"
+			rotation="0 0 210"
+			color="white"
+			rotation="0 0 0"
+			vertex-a="0 0 -0.6"
+			vertex-b="0.035 -0.08 -0.6"
+			vertex-c="0.07 0 -0.6"
+			></a-triangle>
 
+			<a-triangle color="#CCC" vertex-c="1 -1 0"></a-triangle>
 			<a-triangle
 				position="0.75 1.7 -0.5"
 				color="black"
 				rotation="0 0 65"
 				vertex-c="0.0001 -0.001 0"
 			></a-triangle>
-
-			
-
-
-			
-
 		</a-scene>
 	</body>
 </html>
