--- a/index.html
+++ b/index.html
@@ -155,14 +155,49 @@
 			vertex-b="0.035 -0.08 -0.6"
 			vertex-c="0.07 0 -0.6"
 			></a-triangle>
-
-			<a-triangle color="#CCC" vertex-c="1 -1 0"></a-triangle>
+			<!-- eye -->
+			<a-triangle
+				position="0.35 1.68 -0.2"
+				rotation="0 0 100"
+				color="red"
+				vertex-a="0 0 -0.2"
+				vertex-b="0.01 -0.08 -0.2"
+				vertex-c="0.02 0 -0.2"
+			></a-triangle>
+			<a-triangle
+				position="0.348 1.7005 -0.2"
+				rotation="0 0 -80"
+				color="red"
+				vertex-a="0 0 -0.2"
+				vertex-b="0.0104 -0.02 -0.2"
+				vertex-c="0.0208 0 -0.2"
+			></a-triangle>
+			<!-- tongue -->
+			<a-triangle
+				position="0.27 1.56 -0.2"
+				rotation="0 0 108"
+				color="red"
+				vertex-a="0.02 0 -0.2"
+				vertex-b="0.04 -0.15 -0.2"
+				vertex-c="0.062 0 -0.2"
+			></a-triangle>
+			<a-triangle
+				position="0.25 1.63 -0.2"
+				rotation="0 0 335"
+				color="red"
+				vertex-a="0.0 -0.013 -0.2"
+				vertex-b="0.04 -0.15 -0.2"
+				vertex-c="0.08 0.03 -0.2"
+			></a-triangle>
+			<!-- body -->
 			<a-triangle
 				position="0.75 1.7 -0.5"
 				color="black"
 				rotation="0 0 65"
 				vertex-c="0.0001 -0.001 0"
 			></a-triangle>
+			<!-- moon -->
+			<a-sphere color="#9BC9F7" radius="3" position="2 20 -30"></a-sphere>
 		</a-scene>
 	</body>
 </html>
